refactor, also got the EV asignment, still missing

--- a/feature_select/train_cnn.ipynb
+++ b/feature_select/train_cnn.ipynb
@@ -19,12 +19,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process inputs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sa1_data, sa1_tot = process_from_census_data(geo_lev=\"SA1\", normalise=True, boxcox=False, keep_same=True, return_tot=True)\n",
     "poa_data, poa_tot = process_from_census_data(geo_lev=\"POA\", normalise=True, boxcox=False, keep_same=True, return_tot=True)"
    ]
   },
@@ -593,24 +599,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7819.0"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "check = poa_tot * electric_vals\n",
-    "check.sum()"
+    "### Train model"
    ]
   },
   {
@@ -698,6 +690,9 @@
     "# Train the model\n",
     "history = cnn_model.fit(X_train_cnn, y_train, epochs=20, batch_size=X_train.shape[0], validation_split=0.4)\n",
     "\n",
+    "# Save model\n",
+    "cnn_model.save(\"cnn_20.keras\")\n",
+    "\n",
     "# Visualize the loss history\n",
     "plt.plot(history.history['loss'], label='Training Loss')\n",
     "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
@@ -709,78 +704,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cnn_model.save(\"cnn_20.keras\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "484/484 [==============================] - 0s 916us/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "20101100101    0.003368\n",
-       "20101100102    0.003313\n",
-       "20101100105    0.003313\n",
-       "20101100106    0.003377\n",
-       "20101100107    0.003313\n",
-       "                 ...   \n",
-       "21704148034    0.003413\n",
-       "21704148035    0.003313\n",
-       "29797979991    0.014472\n",
-       "29797979992    0.014472\n",
-       "29797979993    0.014472\n",
-       "Name: pred_num_EV_percen, Length: 15481, dtype: float32"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted = cnn_model.predict(sa1_data)\n",
-    "predicted = predicted.flatten()\n",
-    "sa1_data[\"pred_num_EV_percen\"] = predicted\n",
-    "sa1_data[\"pred_num_EV_percen\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9899.301355244243 7819 7819.0\n",
-      "[False]\n"
-     ]
-    }
-   ],
-   "source": [
-    "predicted_num = sa1_data[\"pred_num_EV_percen\"] * sa1_tot\n",
-    "\n",
-    "predicted_num = predicted_num.fillna(0) #na value because that sa1 has no one\n",
-    "predicted_rounded = TRS(predicted_num, know_tot=check.sum())\n",
-    "\n",
-    "print(predicted_num.sum(), predicted_rounded.sum(), check.sum())\n",
-    "\n",
-    "sa1_data[\"pred_num_EV\"] = predicted_rounded"
+    "### Testing small scale with 3000"
    ]
   },
   {
