Finish POA as well, need to check missing zones

--- a/feature_select/run_analysis_sa1.ipynb
+++ b/feature_select/run_analysis_sa1.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Process to assign EV"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -408,6 +415,7 @@
     "ls_df = [] # Note these one will have diff index matching with original to combine later\n",
     "\n",
     "for zone in df_all[geo_lev].unique():\n",
+    "    print(f\"DOING {zone}\")\n",
     "    dict_thres[zone] = {}\n",
     "    sub_df = combine_fin_df[combine_fin_df[geo_lev]==zone]\n",
     "    num_ev = dict_num_ev[zone]\n",
@@ -903,11 +911,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "final_df_all.to_csv(\"SA1_FIN_EV_assignment.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mapping to get the final plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
    ]
   }
  ],
